--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=tienda
 server.port=80
+
+#Propiedades para conectar MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
