--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/techshop
 spring.datasource.username=usuario_prueba
 spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Definiendo información para utilizar cuenta de Correo para usuarios
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=aaron213.ac@gmail.com
+spring.mail.password=oznmclowyewbqif
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
